--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,437 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Lepcha&family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap');
+
+
+// Variables  //
+
+$primary-color: #9356DC;
+    
+$secondary-color: #FF79DA;
+
+$tertiary-color: #99E2D0;
+
+$default-police: black;
+
+$secondary-police: white;
+
+$explanation-color:#F5EDFF;
+
+$input-background:#EAEAEA;
+
+$form-background: #f7f7f7;
+
+$display-news-background: #99E2D0;
+
+$display-news-police: #008766;
+
+$footer-background:#353535;
+
+$explanation-icon-color: #7E7E7E;
+
+$primary-gradient: linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
+
+$secondary-gradient: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
+
+$primary-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+
+$secondary-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
+
+ 
+
+/* Paramétres globaux */
+
+*{
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
+    color: $default-police;
+    box-sizing: border-box;
+}
+
 body{
-    background: black;
+    width: 375px;
+    margin: auto;
+    font-family: 'roboto', sans-serif;
+}
+
+label{
+    display: none;
+}
+
+
+// Fausses Classes //
+
+%format-img {
+    width: 100%;
+    height: 174px;
+    border-radius: 20px 20px 0 0;
+    object-fit: cover;
+}
+
+%logo-ohmyfood{
+    width: 162px;
+    height: 44px;
+    object-fit: contain;
+    display: flex;
+    margin: auto;
+    margin-top: 14px;
+}
+
+%btn {
+    height: 50px;
+    background: $primary-gradient;
+    box-shadow: $primary-shadow;
+    color: $secondary-police;
+    cursor: pointer;
+    border-radius: 25px;
+    font-size: 16px;
+    font-weight: 500;
+    display: flex;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    transform: matrix(1, 0, 0, -1, 0, 0);
+}
+
+%reverse-text {
+    color: $secondary-police;
+    transform: matrix(1, 0, 0, -1, 0, 0);
+}
+
+
+%heart {
+    font: var(--fa-font-regular);
+    font-size: 25px;
+    position: absolute;
+
+}
+
+%heart-hover {
+    font: var(--fa-font-solid);
+    font-size: 25px;
+    background: $primary-gradient;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-background-clip: text;
+    -moz-text-fill-color: transparent;
+    
+}
+
+%explanation {
+    font-size: 16px;
+    font-weight: 500;
+    width: 322.49px;
+    height: 72.38px;
+    margin-left: 32.51px;
+    background: #F7F7F7;
+    display: flex;
+    align-items: center;
+    list-style: none;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+    border-radius: 20px;
+}
+
+
+/* Polices */
+
+
+form p {
+    font-size: 18px;
+    font-weight: 300;
+}
+
+form input {
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.restaurant-card__description h3 {
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.restaurant-card__description p {
+    font-size: 17px;
+    font-weight: 300;
+}
+
+
+/* Header */
+
+
+form{
+    background: $form-background;
+    height: 335px  
+}
+
+header {
+
+    img {
+       @extend %logo-ohmyfood;
+     
+    }
+
+    input{
+        text-align: center;
+        width: 100%;
+        height: 50px;
+        background-color:$input-background ;
+        border: none;
+        box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.15);
+        position: relative;
+    }
+
+    .fa-location-dot{
+        position: absolute;
+        z-index: 1;
+        margin-top: 16px;
+        margin-left: 104px;
+
+    }
+
+    h2{
+        width: 275px;
+        height: 68px;
+        margin: auto;
+        margin-top: 39px;
+        text-align: center;
+    }
+
+    p{
+        width: 315px;
+        height: 46px;
+        margin: auto;
+        text-align: center;
+        margin-bottom: 27px;
+    }
+
+    button {
+
+        @extend %btn;
+        width: 218px;
+    
+        &:hover {
+            background: $secondary-gradient;
+            box-shadow: $secondary-shadow
+
+        }
+    }
+
+    span {
+        @extend %reverse-text;
+    }
+}
+
+
+
+// transition: transform 1.1s;
+// transform: scale(1.3);
+
+
+
+
+
+.explanation {
+
+
+    .explanation__tittle {
+        margin-top: 48px;
+        margin-left: 20px;
+        margin-bottom: 26px;
+    }
+
+    ul {
+        height: 335px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        position: relative;
+    }
+
+    .explanation__step1 {
+        @extend %explanation;
+        position: relative;
+        transition: 0.5s background linear;
+
+        &:before {
+            font: var(--fa-font-solid);
+            content: "\f3cd";
+            padding-right: 27px;
+            padding-left: 33.47px;
+            color: $explanation-icon-color;
+        }
+
+        &:hover::before {
+            color: $primary-color;
+        }
+
+        &:hover {
+            background: $explanation-color;
+        }
+
+
+    }
+
+    .explanation__step2 {
+        @extend .explanation__step1;
+
+        &:before {
+            font: var(--fa-font-solid);
+            content: "\f0ca";
+        }
+    }
+
+    .explanation__step3 {
+        @extend .explanation__step1;
+        margin-bottom: 68px;
+
+        &:before {
+            font: var(--fa-font-solid);
+            content: "\f54e";
+        }
+    }
+
+    .explanation__number {
+        position: absolute;
+        margin-left: -10px;
+        color: #FFFFFF;
+        background: #9356DC;
+        width: 24px;
+        height: 24px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+    }
+
+}
+
+.restaurant-list{
+    background: #F7F7F7;
+    height: 1236px;
+
+    h2{
+        padding: 54px 0 30px 20px;
+    }
+
+    .restaurant-card{
+        margin: auto;
+        box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+        width: 335px;
+        height: 251px;
+        background: #FFFFFF;
+        border-radius: 20px;
+        margin-bottom: 18px;
+    }
+
+    .restaurant-card img{
+        @extend %format-img;
+        position: relative;
+    }
+
+    .new{
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: $display-news-background;
+        color: $display-news-police;
+        border-radius: 2px;
+        width: 80px;
+        height: 29px;
+        z-index: 1;
+        margin-left: 246.35px;
+        margin-top: 10px;
+    }
+    
+    h3{
+        margin-top: 16px;
+        margin-bottom: 5px;
+        margin-left: 12.81px;
+    }
+
+    p{
+        margin-left: 12.81px;
+    }
+    
+    .fa-heart{
+       @extend %heart;
+        margin-left: 288px;
+        margin-top: -40px;
+        transition: transform 1.1s;
+
+      
+    }
+    
+    .fa-heart:hover{
+       @extend %heart-hover;
+       transform: scale(1.3);
+
+    }
+    
+
+    
+}
+
+footer {
+    background: $footer-background;
+
+    a {
+        color: $secondary-police;
+        margin-bottom: 7px;
+    }
+
+    li:nth-of-type(1) {
+        font-family: 'shrikhand';
+        color: $secondary-police;
+        font-size: 18px;
+        padding-top: 17px;
+        margin-left: 25px;
+
+    }
+
+    li:nth-of-type(2) {
+        margin-top: 7px;
+    }
+
+    li:nth-of-type(3) {
+        margin-top: 7px;
+    }
+
+    li:nth-of-type(2)::before {
+        font: var(--fa-font-solid);
+        content: "\f2e7";
+        font-size: 11px;
+        margin-left: 25px;
+        padding-right: 11px;
+        color: $secondary-police;
+
+    }
+
+    li:nth-of-type(3)::before {
+        font: var(--fa-font-solid);
+        content: "\f4c4";
+        color: $secondary-police;
+        margin-left: 25px;
+        padding-right: 8px;
+        font-size: 11px;
+
+
+    }
+
+    li:nth-of-type(4) {
+        font-size: 16px;
+        margin-left: 25px;
+        margin-top: 7px;
+    }
+
+    li:nth-of-type(5) {
+        font-size: 16px;
+        margin-left: 25px;
+        margin-top: 7px;
+        padding-bottom: 33px;
+    }
+
 }
