--- a/assets/style.css
+++ b/assets/style.css
@@ -11,7 +11,7 @@
 }
 
 body {
-  width: 375px;
+  max-width: 1440px;
   margin: auto;
   font-family: "roboto", sans-serif;
 }
@@ -78,7 +78,7 @@ header span {
 .explanation .explanation__step1, .explanation .explanation__step3, .explanation .explanation__step2 {
   font-size: 16px;
   font-weight: 500;
-  width: 322.49px;
+  width: 100%;
   height: 72.38px;
   margin-left: 32.51px;
   background: #F7F7F7;
@@ -114,6 +114,7 @@ form input {
 form {
   background: #f7f7f7;
   height: 335px;
+  position: relative;
 }
 
 header input {
@@ -123,13 +124,12 @@ header input {
   background-color: #EAEAEA;
   border: none;
   box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.15);
-  position: relative;
 }
 header .fa-location-dot {
   position: absolute;
   z-index: 1;
-  margin-top: 16px;
-  margin-left: 104px;
+  top: 15px;
+  left: 100px;
 }
 header h2 {
   width: 275px;
@@ -158,11 +158,13 @@ header button:hover {
   margin-bottom: 26px;
 }
 .explanation ul {
-  height: 335px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   position: relative;
+  row-gap: 25px;
+  padding-right: 70px;
 }
 .explanation .explanation__step1, .explanation .explanation__step3, .explanation .explanation__step2 {
   position: relative;
@@ -215,13 +217,11 @@ header button:hover {
 .restaurant-list .restaurant-card {
   margin: auto;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
-  width: 335px;
+  width: 90%;
   height: 251px;
   background: #FFFFFF;
   border-radius: 20px;
   margin-bottom: 18px;
-}
-.restaurant-list .restaurant-card img {
   position: relative;
 }
 .restaurant-list .new {
@@ -235,8 +235,8 @@ header button:hover {
   width: 80px;
   height: 29px;
   z-index: 1;
-  margin-left: 246.35px;
-  margin-top: 10px;
+  top: 10px;
+  right: 10px;
 }
 .restaurant-list h3 {
   margin-top: 16px;
@@ -247,8 +247,8 @@ header button:hover {
   margin-left: 12.81px;
 }
 .restaurant-list .fa-heart {
-  margin-left: 288px;
-  margin-top: -40px;
+  top: 200px;
+  right: 20px;
   transition: transform 1.1s;
 }
 .restaurant-list .fa-heart:hover {
