--- a/sass/style.scss
+++ b/sass/style.scss
@@ -49,7 +49,7 @@ $secondary-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
 }
 
 body{
-    width: 375px;
+    max-width: 1440px;
     margin: auto;
     font-family: 'roboto', sans-serif;
 }
@@ -122,7 +122,7 @@ label{
 %explanation {
     font-size: 16px;
     font-weight: 500;
-    width: 322.49px;
+    width: 100%;
     height: 72.38px;
     margin-left: 32.51px;
     background: #F7F7F7;
@@ -163,7 +163,8 @@ form input {
 
 form{
     background: $form-background;
-    height: 335px  
+    height: 335px;
+    position: relative
 }
 
 header {
@@ -180,14 +181,13 @@ header {
         background-color:$input-background ;
         border: none;
         box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.15);
-        position: relative;
     }
 
     .fa-location-dot{
         position: absolute;
         z-index: 1;
-        margin-top: 16px;
-        margin-left: 104px;
+        top: 15px;
+        left: 100px;
 
     }
 
@@ -243,11 +243,13 @@ header {
     }
 
     ul {
-        height: 335px;
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         position: relative;
+        row-gap: 25px;
+        padding-right: 70px
     }
 
     .explanation__step1 {
@@ -319,16 +321,17 @@ header {
     .restaurant-card{
         margin: auto;
         box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
-        width: 335px;
+        width: 90%;
         height: 251px;
         background: #FFFFFF;
         border-radius: 20px;
         margin-bottom: 18px;
+        position: relative;
     }
 
     .restaurant-card img{
         @extend %format-img;
-        position: relative;
+        
     }
 
     .new{
@@ -342,8 +345,8 @@ header {
         width: 80px;
         height: 29px;
         z-index: 1;
-        margin-left: 246.35px;
-        margin-top: 10px;
+        top: 10px;
+        right: 10px;
     }
     
     h3{
@@ -358,8 +361,8 @@ header {
     
     .fa-heart{
        @extend %heart;
-        margin-left: 288px;
-        margin-top: -40px;
+        top: 200px;
+        right: 20px;
         transition: transform 1.1s;
 
       
