--- a/assets/style.css
+++ b/assets/style.css
@@ -1,25 +1,5 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Lepcha&family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap");
-/* Paramétres globaux */
-* {
-  padding: 0;
-  margin: 0;
-  text-decoration: none;
-  list-style: none;
-  color: black;
-  box-sizing: border-box;
-}
-
-body {
-  max-width: 1440px;
-  margin: auto;
-  font-family: "roboto", sans-serif;
-}
-
-label {
-  display: none;
-}
-
 .restaurant-list .restaurant-card img {
   width: 100%;
   height: 174px;
@@ -89,6 +69,26 @@ header span {
   border-radius: 20px;
 }
 
+/* Paramétres globaux */
+* {
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  list-style: none;
+  color: black;
+  box-sizing: border-box;
+}
+
+body {
+  max-width: 1440px;
+  margin: auto;
+  font-family: "roboto", sans-serif;
+}
+
+label {
+  display: none;
+}
+
 /* Polices */
 form p {
   font-size: 18px;
@@ -152,6 +152,7 @@ header button:hover {
   background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
 }
+/* Partie explication - présentation du concept du site */
 .explanation .explanation__tittle {
   margin-top: 48px;
   margin-left: 20px;
@@ -207,6 +208,7 @@ header button:hover {
   border-radius: 50%;
 }
 
+/* Liste des différents restaurants disponibles */
 .restaurant-list {
   background: #F7F7F7;
   height: 1236px;
@@ -255,6 +257,7 @@ header button:hover {
   transform: scale(1.3);
 }
 
+/* Footers */
 footer {
   background: #353535;
 }
