--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,51 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Lepcha&family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap');
-
-
-// Variables  //
-
-$primary-color: #9356DC;
-    
-$secondary-color: #FF79DA;
-
-$tertiary-color: #99E2D0;
-
-$default-police: black;
-
-$secondary-police: white;
-
-$explanation-color:#F5EDFF;
-
-$input-background:#EAEAEA;
-
-$form-background: #f7f7f7;
-
-$display-news-background: #99E2D0;
-
-$display-news-police: #008766;
-
-$footer-background:#353535;
-
-$explanation-icon-color: #7E7E7E;
-
-$primary-gradient: linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
-
-$secondary-gradient: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
-
-$primary-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-
-$secondary-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
-
- 
+@import "./libs/variables.scss";
+@import "./libs/false_class.scss";
+@import "./libs/mixins.scss";
 
 /* Paramétres globaux */
 
 *{
-    padding: 0;
-    margin: 0;
-    text-decoration: none;
-    list-style: none;
-    color: $default-police;
-    box-sizing: border-box;
+  @include reset_page;
 }
 
 body{
@@ -56,81 +17,6 @@ body{
 
 label{
     display: none;
-}
-
-
-// Fausses Classes //
-
-%format-img {
-    width: 100%;
-    height: 174px;
-    border-radius: 20px 20px 0 0;
-    object-fit: cover;
-}
-
-%logo-ohmyfood{
-    width: 162px;
-    height: 44px;
-    object-fit: contain;
-    display: flex;
-    margin: auto;
-    margin-top: 14px;
-}
-
-%btn {
-    height: 50px;
-    background: $primary-gradient;
-    box-shadow: $primary-shadow;
-    color: $secondary-police;
-    cursor: pointer;
-    border-radius: 25px;
-    font-size: 16px;
-    font-weight: 500;
-    display: flex;
-    margin: auto;
-    justify-content: center;
-    align-items: center;
-    border: none;
-    transform: matrix(1, 0, 0, -1, 0, 0);
-}
-
-%reverse-text {
-    color: $secondary-police;
-    transform: matrix(1, 0, 0, -1, 0, 0);
-}
-
-
-%heart {
-    font: var(--fa-font-regular);
-    font-size: 25px;
-    position: absolute;
-
-}
-
-%heart-hover {
-    font: var(--fa-font-solid);
-    font-size: 25px;
-    background: $primary-gradient;
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -moz-background-clip: text;
-    -moz-text-fill-color: transparent;
-    
-}
-
-%explanation {
-    font-size: 16px;
-    font-weight: 500;
-    width: 100%;
-    height: 72.38px;
-    margin-left: 32.51px;
-    background: #F7F7F7;
-    display: flex;
-    align-items: center;
-    list-style: none;
-    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
-    border-radius: 20px;
 }
 
 
@@ -224,13 +110,7 @@ header {
     }
 }
 
-
-
-// transition: transform 1.1s;
-// transform: scale(1.3);
-
-
-
+/* Partie explication - présentation du concept du site */
 
 
 .explanation {
@@ -310,6 +190,8 @@ header {
 
 }
 
+/* Liste des différents restaurants disponibles */
+
 .restaurant-list{
     background: #F7F7F7;
     height: 1236px;
@@ -377,6 +259,9 @@ header {
 
     
 }
+
+/* Footers */
+
 
 footer {
     background: $footer-background;
