Mises à jour responsive des pages globals

--- a/assets/style.css
+++ b/assets/style.css
@@ -132,14 +132,12 @@ header .fa-location-dot {
   left: 100px;
 }
 header h2 {
-  width: 275px;
   height: 68px;
   margin: auto;
   margin-top: 39px;
   text-align: center;
 }
 header p {
-  width: 315px;
   height: 46px;
   margin: auto;
   text-align: center;
@@ -275,9 +273,6 @@ footer li:nth-of-type(1) {
 footer li:nth-of-type(2) {
   margin-top: 7px;
 }
-footer li:nth-of-type(3) {
-  margin-top: 7px;
-}
 footer li:nth-of-type(2)::before {
   font: var(--fa-font-solid);
   content: "\f2e7";
@@ -285,6 +280,9 @@ footer li:nth-of-type(2)::before {
   margin-left: 25px;
   padding-right: 11px;
   color: white;
+}
+footer li:nth-of-type(3) {
+  margin-top: 7px;
 }
 footer li:nth-of-type(3)::before {
   font: var(--fa-font-solid);
@@ -304,6 +302,92 @@ footer li:nth-of-type(5) {
   margin-left: 25px;
   margin-top: 7px;
   padding-bottom: 33px;
+}
+
+@media only screen and (min-width: 1024px) {
+  body {
+    max-width: 1440px;
+    width: 100%;
+  }
+  .explanation .explanation__tittle {
+    margin-left: 233px;
+  }
+  .explanation ul {
+    flex-direction: row;
+    padding: 0;
+    padding-right: 192px;
+    padding-left: 205px;
+  }
+  .restaurant-list {
+    height: auto;
+  }
+  .restaurant-list .restaurant-card {
+    width: 47%;
+    margin-bottom: 40px;
+  }
+  .restaurant-list h2 {
+    margin-left: 212px;
+  }
+  .restaurant_organization {
+    margin: auto;
+    width: 85%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  footer {
+    height: 114px;
+  }
+  footer ul {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    justify-content: space-evenly;
+    margin: 0;
+    padding: 0;
+    margin-left: 300px;
+  }
+  footer li:nth-of-type(1) {
+    font-family: "shrikhand";
+    color: white;
+    font-size: 18px;
+    margin: 0;
+    padding: 0;
+    order: 5;
+    margin-right: 90px;
+  }
+  footer li:nth-of-type(2) {
+    margin: 0;
+  }
+  footer li:nth-of-type(2)::before {
+    font: var(--fa-font-solid);
+    content: "\f2e7";
+    font-size: 11px;
+    margin-left: 25px;
+    padding: 0;
+    color: white;
+  }
+  footer li:nth-of-type(3) {
+    margin: 0;
+  }
+  footer li:nth-of-type(3)::before {
+    font: var(--fa-font-solid);
+    content: "\f4c4";
+    color: white;
+    margin: 0;
+    padding: 0;
+    font-size: 11px;
+  }
+  footer li:nth-of-type(4) {
+    font-size: 16px;
+    margin: 0;
+  }
+  footer li:nth-of-type(5) {
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
