--- a/sass/style_restaurant.scss
+++ b/sass/style_restaurant.scss
@@ -2,6 +2,7 @@
 @import "./libs/variables.scss";
 @import "./libs/false_class.scss";
 @import "./libs/mixins.scss";
+@import "./libs/media.scss";
 
 *{
     @include reset_page
@@ -38,8 +39,8 @@ body{
 .fa-arrow-left{
     cursor: pointer;
     position: absolute;
-    top: 26px;
-    left: 23px;
+    top: 2%;
+    left: 13%;
 }
 
 .background_img{
@@ -172,8 +173,6 @@ body{
 }
 
 
-
-
 button {
 
     @extend %btn;
@@ -251,4 +250,110 @@ footer {
         padding-bottom: 33px;
     }
 
+}
+
+
+
+@media only screen and (min-width: 1024px){
+    
+.menu{
+    width: 80%;
+    margin: auto;
+    margin-top: 200px;
+
+    h1{
+        text-align: center;
+    }
+
+    .fa-heart{
+        top: 297px;
+        right: 30%;
+    }
+}
+
+
+.dish__entry, .dish__principal, .dish__dessert{
+    width: 50%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+footer{
+
+    height: 114px;
+
+    ul{
+        height: 100%;
+       display: flex;
+       align-items: center;
+       justify-content: center;
+       justify-content: space-evenly;
+       margin: 0;
+       padding: 0;
+       margin-left: 300px;
+    }
+
+    li:nth-of-type(1) {
+        font-family: 'shrikhand';
+        color: $secondary-police;
+        font-size: 18px;
+        margin: 0;
+        padding: 0;
+        order: 5;
+        margin-right: 90px;
+    }
+
+    li:nth-of-type(2) {
+        margin: 0;
+    }
+
+    li:nth-of-type(2)::before {
+        font: var(--fa-font-solid);
+        content: "\f2e7";
+        font-size: 11px;
+        margin-left: 25px;
+        padding: 0;
+        color: $secondary-police;
+
+    }
+
+    li:nth-of-type(3) {
+        margin: 0;
+    }
+
+    li:nth-of-type(3)::before {
+        font: var(--fa-font-solid);
+        content: "\f4c4";
+        color: $secondary-police;
+        margin: 0;
+        padding: 0;
+        font-size: 11px;
+
+
+    }
+
+    li:nth-of-type(4) {
+        font-size: 16px;
+        margin:0;
+    }
+
+    li:nth-of-type(5) {
+        font-size: 16px;
+        margin: 0;
+        padding:0;
+    }
+
+   }
 }
