--- a/assets/style_restaurant.css
+++ b/assets/style_restaurant.css
@@ -84,8 +84,8 @@ body {
 .fa-arrow-left {
   cursor: pointer;
   position: absolute;
-  top: 26px;
-  left: 23px;
+  top: 2%;
+  left: 13%;
 }
 
 .background_img {
@@ -251,6 +251,77 @@ footer li:nth-of-type(5) {
   margin-left: 25px;
   margin-top: 7px;
   padding-bottom: 33px;
+}
+
+@media only screen and (min-width: 1024px) {
+  .menu {
+    width: 80%;
+    margin: auto;
+    margin-top: 200px;
+  }
+  .menu h1 {
+    text-align: center;
+  }
+  .menu .fa-heart {
+    top: 297px;
+    right: 30%;
+  }
+  .dish__entry, .dish__principal, .dish__dessert {
+    width: 50%;
+  }
+  footer {
+    height: 114px;
+  }
+  footer ul {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    justify-content: space-evenly;
+    margin: 0;
+    padding: 0;
+    margin-left: 300px;
+  }
+  footer li:nth-of-type(1) {
+    font-family: "shrikhand";
+    color: white;
+    font-size: 18px;
+    margin: 0;
+    padding: 0;
+    order: 5;
+    margin-right: 90px;
+  }
+  footer li:nth-of-type(2) {
+    margin: 0;
+  }
+  footer li:nth-of-type(2)::before {
+    font: var(--fa-font-solid);
+    content: "\f2e7";
+    font-size: 11px;
+    margin-left: 25px;
+    padding: 0;
+    color: white;
+  }
+  footer li:nth-of-type(3) {
+    margin: 0;
+  }
+  footer li:nth-of-type(3)::before {
+    font: var(--fa-font-solid);
+    content: "\f4c4";
+    color: white;
+    margin: 0;
+    padding: 0;
+    font-size: 11px;
+  }
+  footer li:nth-of-type(4) {
+    font-size: 16px;
+    margin: 0;
+  }
+  footer li:nth-of-type(5) {
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+  }
 }
 
 /*# sourceMappingURL=style_restaurant.css.map */
