--- a/assets/style.css
+++ b/assets/style.css
@@ -168,6 +168,7 @@ header button:hover {
 .explanation .explanation__step1, .explanation .explanation__step3, .explanation .explanation__step2 {
   position: relative;
   transition: 0.5s background linear;
+  -webkit-transition: 0.5s background linear;
 }
 .explanation .explanation__step1:before, .explanation .explanation__step3:before, .explanation .explanation__step2:before {
   font: var(--fa-font-solid);
@@ -250,6 +251,7 @@ header button:hover {
   top: 200px;
   right: 20px;
   transition: transform 1.1s;
+  -webkit-transition: transform 1.1s;
 }
 .restaurant-list .fa-heart:hover {
   transform: scale(1.3);
