--- a/assets/style_restaurant.css
+++ b/assets/style_restaurant.css
@@ -115,6 +115,7 @@ body {
   top: 317px;
   right: 41px;
   transition: transform 1.1s;
+  -webkit-transition: transform 1.1s;
 }
 .menu .fa-heart:hover {
   transform: scale(1.3);
@@ -190,6 +191,7 @@ body {
   border-radius: 0 15px 15px 0;
   background-color: #99E2D0;
   transition: 1s;
+  -webkit-transition: 1s;
 }
 .dish__entry li:hover .dish__price::after, .dish__principal li:hover .dish__price::after, .dish__dessert li:hover .dish__price::after {
   width: 59px;
