Ajout d'un loader + animation arrivée menu

--- a/assets/style_restaurant.css
+++ b/assets/style_restaurant.css
@@ -124,6 +124,7 @@ body {
 .dish__entry, .dish__principal, .dish__dessert {
   width: 90%;
   margin: auto;
+  opacity: 0;
 }
 .dish__entry h2, .dish__principal h2, .dish__dessert h2 {
   font-family: "Roboto";
@@ -198,6 +199,30 @@ body {
   font-size: 20px;
 }
 
+.dish__entry {
+  animation: slidedown 2.5s forwards;
+  animation-delay: 2s;
+}
+
+.dish__principal {
+  animation: slidedown 2.5s forwards;
+  animation-delay: 1s;
+}
+
+.dish__dessert {
+  animation: slidedown 2.5s forwards;
+}
+
+@keyframes slidedown {
+  0% {
+    transform: translateY(-200px);
+    opacity: 0;
+  }
+  100% {
+    transform: rotateY(0);
+    opacity: 1;
+  }
+}
 button {
   width: 186px;
   margin-top: 20px;
@@ -207,6 +232,14 @@ button:hover {
   background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
 }
+.btn {
+  height: 80px;
+}
+
+button {
+  margin-top: 40px;
+}
+
 footer {
   background: #353535;
 }
@@ -270,6 +303,12 @@ footer li:nth-of-type(5) {
   }
   .dish__entry, .dish__principal, .dish__dessert {
     width: 50%;
+  }
+  .btn {
+    height: 80px;
+  }
+  button {
+    margin-top: 40px;
   }
   footer {
     height: 114px;
