--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,8 +2,6 @@
 @import "./libs/variables.scss";
 @import "./libs/false_class.scss";
 @import "./libs/mixins.scss";
-@import "./libs/media.scss";
-
 
 /* Paramétres globaux */
 
@@ -44,6 +42,8 @@ form input {
     font-size: 17px;
     font-weight: 300;
 }
+
+
 
 
 /* Header */
@@ -248,18 +248,12 @@ header {
         right: 20px;
         transition: transform 1.1s;
         -webkit-transition: transform 1.1s;
-
-      
     }
     
     .fa-heart:hover{
        @extend %heart-hover;
        transform: scale(1.3);
-
     }
-    
-
-    
 }
 
 /* Footers */
@@ -326,6 +320,99 @@ footer {
 
 }
 
+/*Loader*/
+
+.loader {
+    width: 100%;
+    height: 100vh;
+    max-width: 1440px;
+    margin: auto;
+    position: absolute;
+    z-index: 2;
+    opacity: 1;
+    @include flex-center;
+    background: $primary-gradient;
+    animation: disappearance 3s ease-out forwards ;
+    animation-delay: 2s;
+
+
+
+    .letter{
+        color: $tertiary-color;
+        font-size: 30px;
+        font-weight: 700;
+        letter-spacing: 15px;
+        animation: loader infinite 0.9s alternate;
+    }
+
+    .l2{
+        animation-delay: 0.1s;
+    }
+
+    .l3{
+        animation-delay: 0.2s;
+    }
+
+    .l4{
+        animation-delay: 0.3s;
+    }
+
+    .l5{
+        animation-delay: 0.4s;
+    }
+
+    .l6{
+        animation-delay: 0.5s;
+    }
+    
+    .l7{
+        animation-delay: 0.6s;
+    }
+
+    .l8{
+        animation-delay: 0.7s;
+    }
+
+    .l9{
+        animation-delay: 0.8s;
+    }
+
+    .l10{
+        animation-delay: 0.9s;
+    }
+
+    .l11{
+        animation-delay: 1s;
+    }
+
+
+@keyframes loader {
+    100% {
+        transform: translateY(-30px);
+    }
+}
+
+@keyframes disappearance {
+
+    0%{
+        opacity: 1;
+        z-index: 2;
+    }
+
+    100%{
+        opacity: 0;
+        z-index: 0;
+    }
+    
+}
+
+
+
+
+}
+
+
+
 
 @media only screen and (min-width: 1024px) {
     body {
@@ -375,7 +462,6 @@ footer {
         justify-content: space-between;
         flex-wrap: wrap;
     }
-
 
     footer {
 
