--- a/assets/style.css
+++ b/assets/style.css
@@ -110,6 +110,82 @@ form input {
   font-weight: 300;
 }
 
+/*Loader*/
+.loader {
+  width: 100%;
+  height: 100vh;
+  max-width: 1440px;
+  margin: auto;
+  position: absolute;
+  z-index: 2;
+  opacity: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
+  animation: disappearance 3s ease-out forwards;
+  animation-delay: 2s;
+}
+.loader .fa-bowl-food {
+  color: #99E2D0;
+}
+.loader .letter {
+  color: #99E2D0;
+  font-family: "Shrikhand", sans-serif;
+  font-size: 25px;
+  font-weight: 700;
+  letter-spacing: 15px;
+  animation: loader infinite 0.9s alternate;
+}
+.loader .l2 {
+  animation-delay: 0.1s;
+}
+.loader .l3 {
+  animation-delay: 0.2s;
+}
+.loader .l4 {
+  animation-delay: 0.3s;
+}
+.loader .l5 {
+  animation-delay: 0.4s;
+}
+.loader .l6 {
+  animation-delay: 0.5s;
+}
+.loader .l7 {
+  animation-delay: 0.6s;
+}
+.loader .l8 {
+  animation-delay: 0.7s;
+}
+.loader .l9 {
+  animation-delay: 0.8s;
+}
+.loader .l10 {
+  animation-delay: 0.9s;
+}
+.loader .l11 {
+  animation-delay: 1s;
+}
+@keyframes loader {
+  100% {
+    transform: translateY(-30px);
+  }
+}
+@keyframes disappearance {
+  0% {
+    opacity: 0.75;
+    z-index: 2;
+  }
+  50% {
+    z-index: 1;
+  }
+  100% {
+    opacity: 0;
+    z-index: 0;
+  }
+}
+
 /* Header */
 form {
   background: #f7f7f7;
@@ -306,79 +382,14 @@ footer li:nth-of-type(5) {
   padding-bottom: 33px;
 }
 
-/*Loader*/
-.loader {
-  width: 100%;
-  height: 100vh;
-  max-width: 1440px;
-  margin: auto;
-  position: absolute;
-  z-index: 2;
-  opacity: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
-  animation: disappearance 3s ease-out forwards;
-  animation-delay: 2s;
-}
-.loader .letter {
-  color: #99E2D0;
-  font-size: 30px;
-  font-weight: 700;
-  letter-spacing: 15px;
-  animation: loader infinite 0.9s alternate;
-}
-.loader .l2 {
-  animation-delay: 0.1s;
-}
-.loader .l3 {
-  animation-delay: 0.2s;
-}
-.loader .l4 {
-  animation-delay: 0.3s;
-}
-.loader .l5 {
-  animation-delay: 0.4s;
-}
-.loader .l6 {
-  animation-delay: 0.5s;
-}
-.loader .l7 {
-  animation-delay: 0.6s;
-}
-.loader .l8 {
-  animation-delay: 0.7s;
-}
-.loader .l9 {
-  animation-delay: 0.8s;
-}
-.loader .l10 {
-  animation-delay: 0.9s;
-}
-.loader .l11 {
-  animation-delay: 1s;
-}
-@keyframes loader {
-  100% {
-    transform: translateY(-30px);
-  }
-}
-@keyframes disappearance {
-  0% {
-    opacity: 1;
-    z-index: 2;
-  }
-  100% {
-    opacity: 0;
-    z-index: 0;
-  }
-}
-
 @media only screen and (min-width: 1024px) {
   body {
     max-width: 1440px;
     width: 100%;
+  }
+  .loader .letter {
+    font-size: 40px;
+    letter-spacing: 10px;
   }
   .explanation .explanation__tittle {
     margin-left: 233px;
