--- a/sass/style.scss
+++ b/sass/style.scss
@@ -43,7 +43,103 @@ form input {
     font-weight: 300;
 }
 
+/*Loader*/
 
+.loader {
+    width: 100%;
+    height: 100vh;
+    max-width: 1440px;
+    margin: auto;
+    position: absolute;
+    z-index: 2;
+    opacity: 1;
+    @include flex-center;
+    background: $primary-gradient;
+    animation: disappearance 3s ease-out forwards ;
+    animation-delay: 2s;
+
+    .fa-bowl-food{
+        color: $tertiary-color;
+    }
+
+
+    .letter{
+        color: $tertiary-color;
+        font-family: 'Shrikhand', sans-serif;
+        font-size: 25px;
+        font-weight: 700;
+        letter-spacing: 15px;
+        animation: loader infinite 0.9s alternate;
+    }
+
+    .l2{
+        animation-delay: 0.1s;
+        
+    }
+
+    .l3{
+        animation-delay: 0.2s;
+    }
+
+    .l4{
+        animation-delay: 0.3s;
+    }
+
+    .l5{
+        animation-delay: 0.4s;
+    }
+
+    .l6{
+        animation-delay: 0.5s;
+    }
+    
+    .l7{
+        animation-delay: 0.6s;
+    }
+
+    .l8{
+        animation-delay: 0.7s;
+    }
+
+    .l9{
+        animation-delay: 0.8s;
+    }
+
+    .l10{
+        animation-delay: 0.9s;
+    }
+
+    .l11{
+        animation-delay: 1s;
+    }
+
+
+@keyframes loader {
+    100% {
+        transform: translateY(-30px);
+    }
+}
+
+@keyframes disappearance {
+
+    0%{
+        opacity: 0.75;
+        z-index: 2;
+    }
+
+    50%{
+        z-index: 1;
+    }
+
+    100%{
+        opacity: 0;
+        z-index: 0;
+       
+    }
+    
+    }
+
+}
 
 
 /* Header */
@@ -114,7 +210,6 @@ header {
 
 
 .explanation {
-
 
     .explanation__tittle {
         margin-top: 48px;
@@ -320,125 +415,37 @@ footer {
 
 }
 
-/*Loader*/
-
-.loader {
-    width: 100%;
-    height: 100vh;
-    max-width: 1440px;
-    margin: auto;
-    position: absolute;
-    z-index: 2;
-    opacity: 1;
-    @include flex-center;
-    background: $primary-gradient;
-    animation: disappearance 3s ease-out forwards ;
-    animation-delay: 2s;
-
-
-
-    .letter{
-        color: $tertiary-color;
-        font-size: 30px;
-        font-weight: 700;
-        letter-spacing: 15px;
-        animation: loader infinite 0.9s alternate;
-    }
-
-    .l2{
-        animation-delay: 0.1s;
-    }
-
-    .l3{
-        animation-delay: 0.2s;
-    }
-
-    .l4{
-        animation-delay: 0.3s;
-    }
-
-    .l5{
-        animation-delay: 0.4s;
-    }
-
-    .l6{
-        animation-delay: 0.5s;
-    }
-    
-    .l7{
-        animation-delay: 0.6s;
-    }
-
-    .l8{
-        animation-delay: 0.7s;
-    }
-
-    .l9{
-        animation-delay: 0.8s;
-    }
-
-    .l10{
-        animation-delay: 0.9s;
-    }
-
-    .l11{
-        animation-delay: 1s;
-    }
-
-
-@keyframes loader {
-    100% {
-        transform: translateY(-30px);
-    }
-}
-
-@keyframes disappearance {
-
-    0%{
-        opacity: 1;
-        z-index: 2;
-    }
-
-    100%{
-        opacity: 0;
-        z-index: 0;
-    }
-    
-}
-
-
-
-
-}
-
-
-
-
 @media only screen and (min-width: 1024px) {
+
     body {
         max-width: 1440px;
         width: 100%;
     }
+
+    .loader{
+        
+        .letter{
+            font-size: 40px;
+            letter-spacing: 10px;
+        }
+    }
+
+
+
 
     .explanation {
 
         .explanation__tittle {
             margin-left: 233px;
         }
-    }
-
-    .explanation {
-
+        
         ul {
             flex-direction: row;
             padding: 0;
             padding-right: 192px;
             padding-left: 205px;
         }
-
     }
-
-
 
     .restaurant-list {
         height: auto;
